--- a/public/index.html
+++ b/public/index.html
@@ -46,11 +46,7 @@
 					<br><div class="description">
 	
 	Gamarjoba Gagimarjos
-erti
-ori
-sami
-Ki
-Ara&hellip;
+erti ori sami Ki Ara &hellip;
 	
 </div>
 					<a class="readmore" href="/posts/meore/">Read more ⟶</a>
