Switch to Dark Mode

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,9 @@
 					<time>Feb 3, 2025</time>
 					<br><div class="description">
 	
-	Gamarjoba Gagimarjos
-erti ori sami Ki Ara &hellip;
+	posts/meore/index.html +++
+Gamarjoba Gagimarjos
+erti ori &hellip;
 	
 </div>
 					<a class="readmore" href="/posts/meore.html">Read more ⟶</a>
