--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 
 	
 	<link rel="stylesheet" type="text/css" media="screen" href="http://localhost:1313/css/main.6a0f23ea50fd34b46fee262a5a68e17d458c51a2bc99ba1ba018065de6b180c3.css" />
+		<link id="darkModeStyle" rel="stylesheet" type="text/css" href="http://localhost:1313/css/dark.50b57e12d401420df23965fed157368aba37b76df0ecefd0b1ecd4da664f01a0.css"   />
 </head>
 
 	<body>
@@ -45,9 +46,8 @@
 					<time>Feb 3, 2025</time>
 					<br><div class="description">
 	
-	posts/meore/index.html +++
-Gamarjoba Gagimarjos
-erti ori &hellip;
+	Gamarjoba Gagimarjos
+erti ori sami Ki Ara &hellip;
 	
 </div>
 					<a class="readmore" href="/posts/meore.html">Read more ⟶</a>
