Modify second page

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 					<time>Feb 10, 1998</time>
 					<br><div class="description">
 	
-	This is first page
+	This is second page
 	
 </div>
 					<a class="readmore" href="/posts/second.html">Read more ⟶</a>
